--- a/books/index.html
+++ b/books/index.html
@@ -59,7 +59,7 @@
         <nav class="menu jw-menu-copy clear">
             <ul id="jw-menu" class="jw-menu jw-menu-horizontal">
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="/" data-page-link-id="17079820">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/" data-page-link-id="17079820">
                 <span class="">
             Home        </span>
     </a>
@@ -377,7 +377,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
     <div id="jw-element-255005150" data-jw-element-id="255005150" style="width: 20%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-409776104" data-jw-element-id="409776104" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 146px;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/0000260_-high.jpg">
-            <a href="/books/farsi-f-rs" data-page-link-id="17079939">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 108.21917808219%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs" data-page-link-id="17079939">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 108.21917808219%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="146" height="158" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/0000260_-high.jpg" srcset="images/0000260_-high.jpg 146w, images/0000260_-high_1.jpg 300w" sizes="(max-width: 640px) 146px, (max-width: 960px) 18vw, 146px" loading="lazy">
                     </picture>
                 </a>
@@ -388,7 +388,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
 </div></div><div id="jw-element-255005153" data-jw-element-id="255005153" style="width: 20%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-409776106" data-jw-element-id="409776106" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 100%;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/wdlaic/assholism-4.webp">
-            <a href="/books/n-z-sh" data-page-link-id="17096406">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 91.860465116279%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh" data-page-link-id="17096406">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 91.860465116279%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="172" height="158" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/assholism-4.webp" srcset="images/assholism-4.webp 172w, images/assholism-4_1.webp 800w" sizes="(max-width: 640px) 100vw, (max-width: 960px) 18vw, 172px" loading="lazy">
                     </picture>
                 </a>
@@ -399,7 +399,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
 </div></div><div id="jw-element-255005151" data-jw-element-id="255005151" style="width: 20%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-409776123" data-jw-element-id="409776123" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 138px;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/qx2opn/61fe8zer5l_ac_uf8941000_ql80_.jpg">
-            <a href="/books/english-n-l-s" data-page-link-id="17079941">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 114.49275362319%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/books/english-n-l-s" data-page-link-id="17079941">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 114.49275362319%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="138" height="158" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/61fe8zer5l_ac_uf8941000_ql80_.jpg" srcset="images/61fe8zer5l_ac_uf8941000_ql80_.jpg 138w, images/61fe8zer5l_ac_uf8941000_ql80__1.jpg 711w" sizes="(max-width: 640px) 138px, (max-width: 960px) 18vw, 138px" loading="lazy">
                     </picture>
                 </a>
@@ -411,7 +411,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
 </div></div><div id="jw-element-255005152" data-jw-element-id="255005152" style="width: 20%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-409776208" data-jw-element-id="409776208" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 110px;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/h0biex/--.webp">
-            <a href="/books/n-z-sh" data-page-link-id="17096406">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 141.81818181818%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh" data-page-link-id="17096406">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 141.81818181818%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="110" height="156" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/--.webp" srcset="images/--.webp 110w, images/--_1.webp 407w" sizes="(max-width: 640px) 110px, (max-width: 960px) 18vw, 110px" loading="lazy">
                     </picture>
                 </a>
@@ -422,7 +422,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
 </div></div><div id="jw-element-411508611" data-jw-element-id="411508611" style="width: 20%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt200 lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-411508719" data-jw-element-id="411508719" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 115px;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/4462561574964668-high.jpg">
-            <a href="/books/farsi-f-rs" data-page-link-id="17079939">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 136.52173913043%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs" data-page-link-id="17079939">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 136.52173913043%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="115" height="157" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/4462561574964668-high.jpg" srcset="images/4462561574964668-high.jpg 115w, images/4462561574964668-high_1.jpg 800w" sizes="(max-width: 640px) 115px, (max-width: 960px) 18vw, 115px" loading="lazy">
                     </picture>
                 </a>
